--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
                 <div>
                     <!--Picto Panier-->
                     <div>
-                        <img src="images/.png">
+                        <i class="fas fa-search"></i>
                     </div>
                     <!--Picto Search-->
                     <div>
-                        <img src="images/.png">
+                        <i class="fas fa-search"></i>
                     </div>
                     <!--Menu Burger
                     <button class="navbar-toggler collapsed" type="button" id="nav-button" data-toggle="collapse">
@@ -59,7 +59,7 @@
                 </div>
             </div>
             
-            <!--Carrousel de Texte-->
+            <!--Carousel de Texte-->
             <div class="infos">
                 <div class="info-1">Nous avons rallongé nos délais de 60 jours. <a href="#" class="more">En savoir plus</a></div>
             </div>
