--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
                         <img src="images/logo-nike.png" class="logo">
                     </div>
                 </div>
-                <div>
+                <div class="parent-picto">
                     <!--Picto Panier-->
-                    <div>
-                        <i class="fas fa-search"></i>
+                    <div class="picto-1">
+                        <i class="fas fa-shopping-bag"></i>
                     </div>
                     <!--Picto Search-->
-                    <div>
+                    <div class="picto-2">
                         <i class="fas fa-search"></i>
                     </div>
                     <!--Menu Burger
@@ -57,6 +57,7 @@
                           </ul>
                       </nav> -->
                 </div>
+                </div>
             </div>
             
             <!--Carousel de Texte-->
@@ -65,7 +66,35 @@
             </div>
         </header>
         <!--Contenu-->
-            <h1>Nike Air Force 1 '07</h1>
+            <h1>Panier</h1>
+            <p class="recap">1 article</p><p class="prix-global">| 99.99€</p>
+            <hr>
+            <img src="images/chaussure-air-force-1-07-pour-ZWJrWC.jpg" class="choix-produit"/>
+            <h2>Nike Air Force 1 '07</h2>
+            <p class="recap">Chaussure pour Femme</p>
+            <p class="recap">Taille / Pointure</p>
+            <select name="pointure" id="pointure-select" class="recap">
+                <option value="36">36</option>
+                <option value="37">37</option>
+                <option value="38">38</option>
+                <option value="39">39</option>
+                <option value="40">40</option>
+                <option value="41">41</option>
+            </select>
+            <select name="quantité" id="quantité-select" class="recap">
+                <option value="">Quantité</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+            </select>
+            <br>
+            <hr>
+            <div><p>Frais de Livraison estimés</p><p>Gratuit</p></div>
+            <div><p>TOTAL</p><p>99.99€</p></div>
+            <button onclick="window.location.href = './paiement.html/'">Aller au paiement</button>
             <!--Carousel d'Images-->
             <h2>Vous aimerez peut-être aussi</h2>
             <ul class="carousel-items">
@@ -101,7 +130,7 @@
             </div>
                 
             <div>
-                <div><img src="images/pictogramme-twitter.png" class="picto-1"><img src="images/pictogramme-facebook.png" class="picto-2"><img src="images/pictogramme-youtube.png" class="picto-3"><img src="images/pictogramme-instagram.png" class="picto-4"></div>
+                <div><img src="images/pictogramme-twitter.png" class="picto-rs"><img src="images/pictogramme-facebook.png" class="picto-rs"><img src="images/pictogramme-youtube.png" class="picto-rs"><img src="images/pictogramme-instagram.png" class="picto-rs"></div>
                 <div>
                     <div><i class="fas fa-map-marker-alt"></i></div>
                     <div>France</div>
