--- a/paiement.html
+++ b/paiement.html
@@ -78,12 +78,12 @@
 
                         <h2>Paiement</h2>
                         <div>
-                            <input type="radio" id="paypal" name="drone" value="Paypal">
+                            <input type="radio" id="paiement" name="drone" value="Paypal">
                             <label for="Paypal">Paypal</label>
                           </div>
                           
                           <div>
-                            <input type="radio" id="CB" name="drone" value="CB" checked>
+                            <input type="radio" id="paiement" name="drone" value="CB" checked>
                             <label for="CB">Carte bleue</label>
                           </div>
 
@@ -93,7 +93,7 @@
                               <input type="date" name="date" placeholder="Date d'expiration" required>
                               <input type="number" name="number" placeholder="Code de sécurité">
                               <div>
-                                <input type="checkbox" name="condition" checked>
+                                <input type="checkbox" id="checkbox" name="condition" checked>
                                 <label for="condition">Adresse de facturation identique à l'adresse de livraison</label>
                               </div>
                           </form>
