--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <h1>Panier</h1>
             <p class="recap">1 article</p><p class="prix-global">| 99.99€</p>
             <hr>
-            <img src="images/chaussure-air-force-1-07-pour-ZWJrWC.jpg" class="choix-produit"/>
+            <div class="choix-produit"><img src="images/chaussure-air-force-1-07-pour-ZWJrWC.jpg" class="img-produit"/></div>            
             <h2>Nike Air Force 1 '07</h2>
             <p class="recap">Chaussure pour Femme</p>
             <p class="recap">Taille / Pointure</p>
@@ -93,7 +93,8 @@
             <br>
             <hr>
             <div><p>Frais de Livraison estimés</p><p>Gratuit</p></div>
-            <div><p>TOTAL</p><p>99.99€</p></div>
+            <hr>
+            <div><p class="total">Total</p><p>99.99€</p></div>
             <button onclick="window.location.href = './paiement.html/'">Aller au paiement</button>
             <!--Carousel d'Images-->
             <h2>Vous aimerez peut-être aussi</h2>
@@ -108,13 +109,13 @@
         <footer>
             <div>
             <div>
-                <div>
-                    <div>Cartes Cadeaux</div>
-                    <div>Trouver un magasin</div>
-                    <div>S'inscrire aux e-mails</div>
-                    <div>Devenir Membre</div>
-                    <div>Réduction pour Etudiants</div>
-                    <div>Envoyez-nous vos commentaires</div>
+                <div class="offres">
+                    <a href="#">Cartes Cadeaux</a>
+                    <a href="#">Trouver un magasin</a>
+                    <a href="#">S'inscrire aux e-mails</a>
+                    <a href="#">Devenir Membre</a>
+                    <a href="#">Réduction pour Etudiants</a>
+                    <a href="#">Envoyez-nous vos commentaires</a>
                 </div>
                 <hr>
                 <div>
@@ -137,12 +138,12 @@
                 </div>
                 <div class="others">© 2020 Nike, Inc. Tous droits réservés</div>
                 <div class="others">
-                    <a>Guides</a>
-                    <a>Conditons d'utilisation</a>
-                    <a>Conditions Générales de Vente</a>
-                    <a>Informations sur l'entreprise</a>
-                    <a>Politique en matière de confidentialité et de cookies</a>
-                    <a>Paramètres de cookies</a>
+                    <a href="#">Guides</a>
+                    <a href="#">Conditons d'utilisation</a>
+                    <a href="#">Conditions Générales de Vente</a>
+                    <a href="#">Informations sur l'entreprise</a>
+                    <a href="#">Politique en matière de confidentialité et de cookies</a>
+                    <a href="#">Paramètres de cookies</a>
                 </div>
             </div>
             </div>
