Ajustement du footer

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             </ul>
         <!--Bas de page-->
         <footer>
-            <div>
+            <div class="footer">
             <div>
                 <div class="offres">
                     <a href="#">Cartes Cadeaux</a>
@@ -119,22 +119,21 @@
                 </div>
                 <hr>
                 <div>
-                    <div>
-                        <div>Aide</div>
-                        <div><i class="fas fa-plus"></i></div>
+                    <div class="bloc-aide">
+                        <div class="gauche">Aide</div>
+                        <div class="droite"><i class="fas fa-plus"></i></div>
                     </div>
-                    <div>
-                        <div>A propos de Nike</div>
-                        <div><i class="fas fa-plus"></i></div>
+                    <div class="bloc-about">
+                        <div class="gauche">A propos de Nike</div>
+                        <div class="droite"><i class="fas fa-plus"></i></div>
                     <div>
                 </div>
             </div>
                 
             <div>
-                <div><img src="images/pictogramme-twitter.png" class="picto-rs"><img src="images/pictogramme-facebook.png" class="picto-rs"><img src="images/pictogramme-youtube.png" class="picto-rs"><img src="images/pictogramme-instagram.png" class="picto-rs"></div>
-                <div>
-                    <div><i class="fas fa-map-marker-alt"></i></div>
-                    <div>France</div>
+                <div class="social"><img src="images/pictogramme-twitter.png" class="picto-rs">&nbsp;<img src="images/pictogramme-facebook.png" class="picto-rs">&nbsp;<img src="images/pictogramme-youtube.png" class="picto-rs">&nbsp;<img src="images/pictogramme-instagram.png" class="picto-rs"></div>
+                <div class="position">
+                    <div><i class="fas fa-map-marker-alt"></i>&nbsp;&nbsp;&nbsp;France</div>
                 </div>
                 <div class="others">© 2020 Nike, Inc. Tous droits réservés</div>
                 <div class="others">
