Gestion des boutons

--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
             </select>
             <br>
             <hr>
-            <div><p>Frais de Livraison estimés</p><p>Gratuit</p></div>
+            <span><p>Frais de Livraison estimés</p><p class="free">Gratuit</p></span>
             <hr>
-            <div><p class="total">Total</p><p>99.99€</p></div>
+            <span><p class="total">Total</p><p>99.99€</p></span>
             <button onclick="window.location.href = './paiement.html/'">Aller au paiement</button>
             <!--Carousel d'Images-->
             <h2>Vous aimerez peut-être aussi</h2>
