--- a/paiement.html
+++ b/paiement.html
@@ -102,48 +102,47 @@
 
 
             </main>
-        <!--Bas de page-->
-        <footer>
-            <div>
-            <div>
-                <div>
-                    <div>Cartes Cadeaux</div>
-                    <div>Trouver un magasin</div>
-                    <div>S'inscrire aux e-mails</div>
-                    <div>Devenir Membre</div>
-                    <div>Réduction pour Etudiants</div>
-                    <div>Envoyez-nous vos commentaires</div>
-                </div>
-                <hr>
-                <div>
-                    <div>
-                        <div>Aide</div>
-                        <div><i class="fas fa-plus"></i></div>
-                    </div>
-                    <div>
-                        <div>A propos de Nike</div>
-                        <div><i class="fas fa-plus"></i></div>
-                    <div>
-                </div>
+<!--Bas de page-->
+<footer>
+    <div class="footer">
+    <div>
+        <div class="offres">
+            <a href="#">Cartes Cadeaux</a>
+            <a href="#">Trouver un magasin</a>
+            <a href="#">S'inscrire aux e-mails</a>
+            <a href="#">Devenir Membre</a>
+            <a href="#">Réduction pour Etudiants</a>
+            <a href="#">Envoyez-nous vos commentaires</a>
+        </div>
+        <hr>
+        <div>
+            <div class="bloc-aide">
+                <div class="gauche">Aide</div>
+                <div class="droite"><i class="fas fa-plus"></i></div>
             </div>
-                
+            <div class="bloc-about">
+                <div class="gauche">A propos de Nike</div>
+                <div class="droite"><i class="fas fa-plus"></i></div>
             <div>
-                <div><img src="images/pictogramme-twitter.png" class="picto-1"><img src="images/pictogramme-facebook.png" class="picto-2"><img src="images/pictogramme-youtube.png" class="picto-3"><img src="images/pictogramme-instagram.png" class="picto-4"></div>
-                <div>
-                    <div><i class="fas fa-map-marker-alt"></i></div>
-                    <div>France</div>
-                </div>
-                <div class="others">© 2020 Nike, Inc. Tous droits réservés</div>
-                <div class="others">
-                    <a>Guides</a>
-                    <a>Conditons d'utilisation</a>
-                    <a>Conditions Générales de Vente</a>
-                    <a>Informations sur l'entreprise</a>
-                    <a>Politique en matière de confidentialité et de cookies</a>
-                    <a>Paramètres de cookies</a>
-                </div>
-            </div>
-            </div>
-        </footer>
-    </body>
+        </div>
+    </div>
+        
+    <div>
+        <div class="social"><img src="images/pictogramme-twitter.png" class="picto-rs">&nbsp;<img src="images/pictogramme-facebook.png" class="picto-rs">&nbsp;<img src="images/pictogramme-youtube.png" class="picto-rs">&nbsp;<img src="images/pictogramme-instagram.png" class="picto-rs"></div>
+        <div class="position">
+            <div><i class="fas fa-map-marker-alt"></i>&nbsp;&nbsp;&nbsp;France</div>
+        </div>
+        <div class="others">© 2020 Nike, Inc. Tous droits réservés</div>
+        <div class="others">
+            <a href="#">Guides</a>
+            <a href="#">Conditons d'utilisation</a>
+            <a href="#">Conditions Générales de Vente</a>
+            <a href="#">Informations sur l'entreprise</a>
+            <a href="#">Politique en matière de confidentialité et de cookies</a>
+            <a href="#">Paramètres de cookies</a>
+        </div>
+    </div>
+    </div>
+</footer>
+</body>
 </html>
