MAJ du code HTML

--- a/confirmation.html
+++ b/confirmation.html
@@ -59,7 +59,11 @@
                 </div>
                 </div>
             </div>
-            
+            <!--Carousel de Texte-->
+            <div class="infos">
+                <div class="info-1">Nous avons rallongé nos délais de 60 jours. <a href="#" class="more">En savoir plus</a></div>
+            </div>
+            <!--Confirmation-->
             <main>
                 <h2>Confirmation de commande</h2>
                 <hr>
