Ajout des dark-title

--- a/paiement.html
+++ b/paiement.html
@@ -63,7 +63,7 @@
         <!--Contenu-->
             <h1>Nike Air Force 1 '07</h1>
             <main>
-                <h2>Options de livraison</h2>
+                <h2  class="dark-title">Options de livraison</h2>
                     <form action="">
                         <input type="text" name="name" placeholder="Nom" required>
                         <input type="text" name="name" placeholder="Prénom" required>
@@ -76,7 +76,7 @@
                         <input type="tel" name="phone" placeholder="Pays" required>
                     </form>
 
-                        <h2>Paiement</h2>
+                        <h2  class="dark-title">Paiement</h2>
                         <div>
                             <input type="radio" id="paiement" name="drone" value="Paypal">
                             <label for="Paypal">Paypal</label>
