--- a/recapitulatif.html
+++ b/recapitulatif.html
@@ -63,8 +63,7 @@
         <!--Contenu-->
             <h1>Panier</h1>
             <p class="recap">1 article</p><p class="prix-global">| 99.99€</p>
-            <hr>
-            <h2>Récapitulatif de commande</h2>
+            <h2 class="dark-title">Récapitulatif de commande</h2>
             <div class="choix-produit"><img src="images/chaussure-air-force-1-07-pour-ZWJrWC.jpg" class="img-produit"/></div>            
             <h2>Nike Air Force 1 '07</h2>
             <p class="recap">Chaussure pour Femme</p>
