--- a/paiement.html
+++ b/paiement.html
@@ -64,16 +64,15 @@
             <h1>Nike Air Force 1 '07</h1>
             <main>
                 <h2  class="dark-title">Options de livraison</h2>
-                    <form action="">
-                        <input type="text" name="name" placeholder="Nom" required>
-                        <input type="text" name="name" placeholder="Prénom" required>
-                        <input type="email" name="email" placeholder="E-mail" required>
-                        <input type="tel" name="phone" placeholder="Téléphone" required>
-                        <input type="address" name="address" placeholder="Adresse" required>
-                        <input type="tel" name="phone" placeholder="Code Postal" required>
-                        <input type="tel" name="phone" placeholder="Ville" required>
-                        <input type="tel" name="phone" placeholder="Téléphone" required>
-                        <input type="tel" name="phone" placeholder="Pays" required>
+                    <form action="" class="formulaire">
+                        <input type="text" name="name" class="input" placeholder="Nom" required>
+                        <input type="text" name="name" class="input" placeholder="Prénom" required>
+                        <input type="email" name="email" class="input" placeholder="E-mail" required>
+                        <input type="tel" name="phone" class="input" placeholder="Téléphone" required>
+                        <input type="text" name="address" class="input" placeholder="Adresse" required>
+                        <input type="text" name="cp" class="input" placeholder="Code Postal" required>
+                        <input type="text" name="ville" class="input" placeholder="Ville" required>
+                        <input type="text" name="pays" class="input" placeholder="Pays" required>
                     </form>
 
                         <h2  class="dark-title">Paiement</h2>
@@ -87,11 +86,11 @@
                             <label for="CB">Carte bleue</label>
                           </div>
 
-                          <form action="">
-                              <input type="text" name="name" placeholder="Nom du détenteur de la carte" required>
-                              <input type="number" name="number" placeholder="Numéro de la carte" required>
-                              <input type="date" name="date" placeholder="Date d'expiration" required>
-                              <input type="number" name="number" placeholder="Code de sécurité">
+                          <form action="" class="formulaire">
+                              <input type="text" name="name" class="input" placeholder="Nom du détenteur de la carte" required>
+                              <input type="number" name="number" class="input" placeholder="Numéro de la carte" required>
+                              <input type="date" name="date" class="input" placeholder="Date d'expiration" required>
+                              <input type="number" name="number" class="input" placeholder="Code de sécurité">
                               <div>
                                 <input type="checkbox" id="checkbox" name="condition" checked>
                                 <label for="condition">Adresse de facturation identique à l'adresse de livraison</label>
