--- a/recapitulatif.html
+++ b/recapitulatif.html
@@ -91,7 +91,7 @@
             <hr>
             <span><p class="total">Total</p><p>99.99€</p></span>
             <h3>Adresse de livraison</h3>
-            <div>
+            <div class="infos-recap">
                 <p>Mme Capucine Vandercoilden</p>
                 <p> 80 avenue Edmund Halley</p>
                 <p>76800 Saint-Étienne-du-Rouvray</p>
