--- a/paiement.html
+++ b/paiement.html
@@ -77,12 +77,12 @@
 
                         <h2  class="dark-title">Paiement</h2>
                         <div>
-                            <input type="radio" id="paiement" name="drone" value="Paypal">
+                            <input type="radio" id="checkbox" name="drone" value="Paypal">
                             <label for="Paypal">Paypal</label>
                           </div>
                           
                           <div>
-                            <input type="radio" id="paiement" name="drone" value="CB" checked>
+                            <input type="radio" id="checkbox" name="drone" value="CB" checked>
                             <label for="CB">Carte bleue</label>
                           </div>
 
