--- a/paiement.html
+++ b/paiement.html
@@ -97,7 +97,7 @@
                               </div>
                           </form>
 
-                          <button class="save">Enregistrer et continuer</button>
+                          <button class="save"><a href="recapitulatif.html">Enregistrer et continuer</a></button>
 
 
             </main>
