--- a/recapitulatif.html
+++ b/recapitulatif.html
@@ -104,7 +104,7 @@
             <h3>Paiement</h3>
             <p>Carte Bleue finissant par XX49.</p>
             <br>
-            <button class="save">Confirmer</button>
+            <button class="save"><a href="confirmation.html">Confirmer</a></button>
             <br><br><br>
         <!--Bas de page-->
         <footer>
