--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <span><p>Frais de Livraison estimés</p><p class="free">Gratuit</p></span>
             <hr>
             <span><p class="total">Total</p><p>99.99€</p></span>
-            <button onclick="window.location.href = '/paiement.html/'">Aller au paiement</button>
+            <button><a href="paiement.html">Aller au paiement</a></button>
             <!--Carousel d'Images-->
             <h2>Vous aimerez peut-être aussi</h2>
             <ul class="carousel-items">
