--- a/paiement.html
+++ b/paiement.html
@@ -77,12 +77,12 @@
 
                         <h2  class="dark-title">Paiement</h2>
                         <div>
-                            <input type="radio" id="checkbox" name="drone" value="Paypal">
+                            <input type="radio" id="Paypal"  class="checkbox" name="drone" value="Paypal">
                             <label for="Paypal">Paypal</label>
                           </div>
                           
                           <div>
-                            <input type="radio" id="checkbox" name="drone" value="CB" checked>
+                            <input type="radio" id="CB"  class="checkbox" name="drone" value="CB" checked>
                             <label for="CB">Carte bleue</label>
                           </div>
 
@@ -92,7 +92,7 @@
                               <input type="date" name="date" class="input" placeholder="Date d'expiration" required>
                               <input type="number" name="number" class="input" placeholder="Code de sécurité">
                               <div>
-                                <input type="checkbox" id="checkbox" name="condition" checked>
+                                <input type="checkbox" id="condition" class="checkbox" name="condition" checked>
                                 <label for="condition">Adresse de facturation identique à l'adresse de livraison</label>
                               </div>
                           </form>
