--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <div class="picto-2">
                         <i class="fas fa-search"></i>
                     </div>
-                    <!--Menu Burger
+                    <!--Menu Burger-->
                     <button class="navbar-toggler collapsed" type="button" id="nav-button" data-toggle="collapse">
                         <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
                       </button>
@@ -55,7 +55,7 @@
                               <li class="menu-item"><a href="#" class="link-items">Promotions</a></li>
                               <li class="menu-item"><a href="#" class="link-items">Collections</a></li>
                           </ul>
-                      </nav> -->
+                      </nav>
                 </div>
                 </div>
             </div>
